2017-11-19  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #83033: Adapt suggest options to 8 LTS

2017-10-16  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #82779: Corrections to official and English names of Swiss cantons - Thanks to Urs Bräm
	* Resolves #80408: Error in composer replace statement

2017-04-11  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Update version to 6.4.3

2017-02-21  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79648: Call to undefined method SJBR\StaticInfoTables\Domain\Model\Country::getAddessFormat()
	* Resolves #79944: Croatia is not marked as EU country
	* Resolves #77144: Table 'typo3.tx_staticinfotables_domain_model_language' doesn't exist

2017-01-24  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Update version to 6.4.2

2017-01-20  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79396: class.tx_staticinfotables_encoding.php, failed to open stream: No such file or directory

2017-01-18  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79384: Issues in TYPO3 CMS 7 after migration to Doctrine
	* Resolves #79385: Update extension icon to svg
	* Update version to 6.4.1

2017-01-17  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79359: Migrate PiBaseApi to Doctrine
	* Follow-up to Resolves #79229: Migrate suggest receiver to Doctrine
	* Follow-up to Resolves #79207: Cleanup extension configuration
	* Update version to 6.4.0

2017-01-10  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79255: Migrate Localization Utility to Doctrine

2017-01-09  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79223: Standardize SQL table definitions
	* Resolves #79035: Update currency of Baltic states
	* Resolves #77245: Add languages "Swiss" and "Austrian"
	* Resolves #77246: Missing extbase declaration for field "static_lang_isocode" in sys_language
	* Follow-up to Resolves #79209: Migrate update script to Doctrine
	* Resolves #79229: Migrate suggest receiver to Doctrine