@@ -1,6 +1,7 @@
 2017-11-19  Stanislas Rolland  <typo3(arobas)sjbr.ca>
 
 	* Resolves #83033: Adapt suggest options to 8 LTS
+	* Resolves #82808: Critical Invalid Cache Bug - Thanks to Tim Lochmüller
 
 2017-10-16  Stanislas Rolland  <typo3(arobas)sjbr.ca>
 
